--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   role_name: backup-verification
-  author: leafnode
+  author: iroquoisorg
   description: role to verify backup
   license: BSD
   min_ansible_version: 2.5.4 # tested on this version, might work on older versions
