--- a/tests/test.yml
+++ b/tests/test.yml
@@ -13,5 +13,5 @@
     shell: date +%Y_%m_%d_%H_%M_%S
     register: timestamp
   roles:
-    - backup
+    - iroquoisorg.backup
     - ansible-role-backup-verification
